xembedsniproxy: Guard against crash when xcb_query_tree_reply is null

BUG:491509
FIXED-IN:6.1.5